--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
 .App-header button {
   padding: 10px 20px;
   margin-bottom: 20px;
+  margin-top: 10px;
   font-size: 16px;
   cursor: pointer;
 }
